--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  flutter_svg: ^1.1.4
+  flutter_bloc: ^8.1.1
+  flutter_dotenv: ^5.0.2
+  freezed_annotation: ^2.1.0
+  json_annotation: ^4.6.0
+  equatable: ^2.0.5
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +50,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  freezed: ^2.1.0+1
+  json_serializable: ^6.3.1
+  build_runner: ^2.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
