--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   json_annotation: ^4.6.0
   equatable: ^2.0.5
   http: ^0.13.5
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
